--- a/politica_privacidade.html
+++ b/politica_privacidade.html
@@ -163,8 +163,8 @@
             <p>
                 <strong>Dr. Victor Almeida</strong><br>
                 <strong>CRM-BA:</strong> 22586<br>
-                <strong>Email:</strong> [inserir email]<br>
-                <strong>Telefone:</strong> [inserir telefone]<br>
+                <strong>Email:</strong> contato@drvictoralmeida.com.br<br>
+                <strong>Telefone:</strong> 71981349420<br>
                 <strong>Site:</strong> drvictoralmeida.com.br
             </p>
         </div>
